# cpp-ue-test

./: .gitattributes  .gitignore  README.md
Cpp/: CMakeLists.txt  win.cmd
Cpp/src/: main.cpp  utils.cpp
Cpp/src/game/: Application.cpp  Application.hpp
Cpp/src/include/: utils.hpp  version.hpp
Unreal/: ErizosTest.uproject
Unreal/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/Content/: ExamActor_Blueprint.uasset  MainScene.umap  MainScene_BuiltData.uasset  TextMaterial.uasset
Unreal/Source/: ErizosTest.Target.cs  ErizosTestEditor.Target.cs
Unreal/Source/ErizosTest/: ErizosTest.Build.cs  ErizosTest.cpp  ErizosTestGameModeBase.cpp  ErizosTestGameModeBase.h  ExamActor.cpp  ExamActor.h  UtilityFunctions.cpp  UtilityFunctions.h
